# Computer-Vision-Research

./: README.md  mobile-nett.ipynb  model.py  requirements.txt
notebook_tasks/: image_multi_classification.ipynb
papers/mobile_net/: model.py  train_loader.py  utils.py
papers_implementation/ViT/: README.md  pyproject.toml
papers_implementation/ViT/config/: config.py  default.yaml
papers_implementation/ViT/notebook/: vit.ipynb
papers_implementation/ViT/scripts/: eval.sh  train.sh
papers_implementation/ViT/src/: __init__.py  utils.py
papers_implementation/ViT/src/model/: components.py  vit.py
papers_implementation/ViT/src/utils/: helper_functions.py
papers_implementation/ViT/tests/: test_components.py  test_model.py
papers_implementation/ViT/training/: data_loader.py  eval.py  train.py  train_loader.py
papers_implementation/mobile_net/: README.md  model.py  requirements.txt  train.py
papers_implementation/mobile_net/my_venv/: pyvenv.cfg
papers_implementation/res_net/: README.md
papers_implementation/res_net/config/: config.py  default.yaml
papers_implementation/res_net/notebook/: resnet-18.ipynb
papers_implementation/res_net/scripts/: train.sh
papers_implementation/res_net/src/: model.py  utils.py
papers_implementation/res_net/training/: train.py  train_loader.py
